fixed main container margins so footer doesn't overlap

--- a/app/assets/stylesheets/currentProduct.scss
+++ b/app/assets/stylesheets/currentProduct.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  margin-bottom: 40px;
+  margin-bottom: 270px;
 }
 
 #currentProduct {
@@ -129,7 +129,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  margin-bottom: 40px;
+  margin-bottom: 270px;
 }
 
 #currentProduct {
@@ -261,7 +261,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  margin-bottom: 80px;
+  margin-bottom: 440px;
 }
 
 #currentProduct {
