--- a/app/assets/stylesheets/mainPage.scss
+++ b/app/assets/stylesheets/mainPage.scss
@@ -6,16 +6,12 @@
   max-width: 100vw;
   min-height: 100%;
   min-width: 500px;
-  margin-bottom: 150px;
+  margin-bottom: 270px;
   clear: both;
 }
 
 #instafeed{
 
-}
-
-.main{
-height-min: 100%;
 }
 
 .featuredContainer{
@@ -51,7 +47,7 @@ height-min: 100%;
   font-family: 'woodfordbourne-bold';
 }
 .featuredLink .label {
-  top: 60%;
+  top: 50%;
 }
 .label:hover{
   color: black;
@@ -75,6 +71,11 @@ body {
 
 img{
   max-width: 100%;
+}
+
+a, a:hover, a:active, a:visited, a:focus {
+    text-decoration: none;
+    color: black;
 }
 
 p{
