--- a/app/assets/stylesheets/selectedProducts.scss
+++ b/app/assets/stylesheets/selectedProducts.scss
@@ -3,7 +3,7 @@
 @media(min-width: 1026px){
   .selectedProductsMain{
     min-height: 100%;
-    margin-bottom: 150px;
+    margin-bottom: 270px;
   }
 
   .galleryContainer{
@@ -96,7 +96,7 @@
 @media(min-width: 750px) and (max-width:1025px){
   .selectedProductsMain{
     min-height: 100%;
-    margin-bottom: 150px;
+    margin-bottom: 270px;
   }
 
   .galleryContainer{
@@ -191,7 +191,7 @@
 @media(max-width:749px){
   .selectedProductsMain{
     min-height: 100%;
-    margin-bottom: 150px;
+    margin-bottom: 440px;
   }
 
   .galleryContainer{
