--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -322,11 +322,8 @@
   max-width: 100vw;
   min-height: 100%;
   min-width: 500px;
-  margin-bottom: 150px;
+  margin-bottom: 270px;
   clear: both; }
-
-.main {
-  height-min: 100%; }
 
 .featuredContainer {
   height: 600px;
@@ -358,7 +355,7 @@
   font-family: 'woodfordbourne-bold'; }
 
 .featuredLink .label {
-  top: 60%; }
+  top: 50%; }
 
 .label:hover {
   color: black; }
@@ -378,6 +375,10 @@ body {
 
 img {
   max-width: 100%; }
+
+a, a:hover, a:active, a:visited, a:focus {
+  text-decoration: none;
+  color: black; }
 
 p {
   font-family: 'crimson_textroman';
@@ -407,7 +408,7 @@ h6 {
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    margin-bottom: 40px; }
+    margin-bottom: 270px; }
   #currentProduct {
     display: flex;
     margin-bottom: 100px;
@@ -491,7 +492,7 @@ h6 {
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    margin-bottom: 40px; }
+    margin-bottom: 270px; }
   #currentProduct {
     display: flex;
     flex-direction: column;
@@ -582,7 +583,7 @@ h6 {
     display: flex;
     flex-direction: column;
     min-height: 100%;
-    margin-bottom: 80px; }
+    margin-bottom: 440px; }
   #currentProduct {
     display: flex;
     flex-direction: column;
@@ -671,7 +672,7 @@ h6 {
 @media (min-width: 1026px) {
   .selectedProductsMain {
     min-height: 100%;
-    margin-bottom: 150px; }
+    margin-bottom: 270px; }
   .galleryContainer {
     display: flex; }
   .gallery {
@@ -733,7 +734,7 @@ h6 {
 @media (min-width: 750px) and (max-width: 1025px) {
   .selectedProductsMain {
     min-height: 100%;
-    margin-bottom: 150px; }
+    margin-bottom: 270px; }
   .galleryContainer {
     display: flex; }
   .gallery {
@@ -795,7 +796,7 @@ h6 {
 @media (max-width: 749px) {
   .selectedProductsMain {
     min-height: 100%;
-    margin-bottom: 150px; }
+    margin-bottom: 440px; }
   .galleryContainer {
     display: flex; }
   .gallery {
